2019-10-23 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c,
	  src/pdk/gen.c:
	  Improve ! of bool.

2019-10-23 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Register shuffling fix, small | improvement.

2019-10-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix an issue in stack operands of shifts.
	* support/regression/tests/gcc-torture-execute-20000113-1.c,
	  support/regression/tests/gcc-torture-execute-950511-1.c,
	  support/regression/tests/gcc-torture-execute-pr42833.c:
	  Disable tests failing due to known bugs.

2019-10-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Fix a typo that resulted in comp being emitted for pdk13.

2019-10-19 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pdk15-stack-auto/__setjmp.s:
	  Fix bug #2934.
	* src/pdk/gen.c:
	  Fix 3 issues in handling of non-dead p.

2019-10-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Use pdk15 comp.

2019-10-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix code generation for calls via function pointers.

2019-10-14 Philipp Klaus Krause <pkk AT spth.de>

	* Merge pic14 branch.

2019-10-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c,
	  src/SDCCsalloc.hpp,
	  src/stm8/gen.c,
	  src/z80/gen.c,
	  src/pdk/gen.c:
	  Improve tail call optimization.

2019-10-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.h:
	  Fix error message, patch #307 by RvS.
	* src/SDCCsymt.c:
	  Indentation fix.

2019-10-07 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pic14/glue.c:
	  Improve compability with trunk, patches by Gonzalo Pérez de Olaguer Córdoba.

2019-10-06 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk15/pdk15pst.c:
	  Fix swapc bug #2935.

2019-10-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Improve handling of stack operands in comparison.
